--- a/sistemahome.html
+++ b/sistemahome.html
@@ -14,20 +14,21 @@
 </head>
 <body>
 	<header id="header">
-		<a id="logo" href ="inicial.html" > logo </a >
-		<nav id="nav">
-		  <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false"> 
-			<span id="menuhamburger">
-				<img id="xbuger" src="images/hambuguer-fechado1.svg" alt="menu"></span>
-		  </button>
-		  <ul id="menu" role="menu">
-			<li><a href="#">botão</a></li>
-			<li><a href="#">botão</a></li>
-			<li><a href="#">botão</a></li>
-			<li><a href="#">botão</a></li>
-			<li><a href="#">botão</a></li>
-		  </ul>
-		</nav>
+			<nav>
+				<a class="logo" href="/">Tiger Codes</a>
+				<div class="mobile-menu">
+				  <div class="line1"></div>
+				  <div class="line2"></div>
+				  <div class="line3"></div>
+				</div>
+				<ul class="nav-list">
+				  <li><a href="#">Início</a></li>
+				  <li><a href="#">Sobre</a></li>
+				  <li><a href="#">Projetos</a></li>
+				  <li><a href="#">Contato</a></li>
+				</ul>
+			  </nav>
+			</header>
 	  </header>
 	  
 		<div class="container">
